kube-manifests/04-IngressService-Manifests/01-Ingress-Context-Path-Based-Routing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr
  namespace: mysql
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    #kubernetes.io/ingress.class: nginx  
spec:
  ingressClassName: nginx
  #defaultBackend:
  #  service:
  #    name: usermgmt-webapp-clusterip-service
  #    port:
  #      number: 80
  rules:
  - host: application.practicecloud.cloud
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app1-nginx-clusterip-service
            port: 
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: app2-nginx-clusterip-service
            port: 
              number: 80  
      - path: /
        pathType: Prefix
        backend:
          service:
            name: usermgmt-webapp-clusterip-service
            port: 
              number: 80                  
                                                 
  tls:
  - hosts:   
    - application.practicecloud.cloud
    secretName: application-cert
